新增指令綁定及 UI 元素，優化文件檢視器
新增了 `Window.CommandBindings` 元素，並在其中添加了三個 `CommandBinding`，分別綁定到 `ApplicationCommands.New`、`ApplicationCommands.Open` 和 `ApplicationCommands.Save` 命令，並指定了對應的執行方法。
將 `newButton`、`openButton` 和 `saveButton` 的 `Command` 屬性分別設置為 `ApplicationCommands.New`、`ApplicationCommands.Open` 和 `ApplicationCommands.Save`。
將 `editingToolBar` 的寬度從 400 增加到 450。
在 `editingToolBar` 中新增了兩個 `ComboBox`，分別用於選擇字體和字體大小。
在 `DockPanel` 中新增了一個 `RichTextBox`，並設置其名稱為 `rtbEditor`，背景色為 `#FFFFFDE6`，並包含一個空的 `FlowDocument`。
在 `MyDocumentViewer.xaml.cs` 中，移除了多餘的 `using` 指令，並新增了 `using System.Windows.Media`。
在 `MyDocumentViewer` 類別中新增了一個 `Color` 類型的 `fontColor` 變數，並在構造函數中初始化 `fontColorPicker` 的 `SelectedColor` 屬性。
在構造函數中，將系統字體添加到 `fontFamilyComboBox`，並將其預設選項設置為第 8 項。
在構造函數中，將一組字體大小添加到 `fontSizeComboBox`，並將其預設選項設置為第 3 項。
新增了 `NewCommand_Executed` 方法，該方法會創建並顯示一個新的 `MyDocumentViewer` 視窗。
新增了 `OpenCommand_Executed` 方法，目前該方法為空。

--- a/MyDocumentViewer.xaml
+++ b/MyDocumentViewer.xaml
@@ -7,23 +7,28 @@
         xmlns:local="clr-namespace:WpfApp5"
         mc:Ignorable="d"
         Title="MyDocumentViewer" Height="450" Width="800">
+    <Window.CommandBindings>
+        <CommandBinding Command="ApplicationCommands.New" Executed="NewCommand_Executed"/>
+        <CommandBinding Command="ApplicationCommands.Open" Executed="OpenCommand_Executed"/>
+        <CommandBinding Command="ApplicationCommands.Save" Executed="SaveCommand_Executed"/>
+    </Window.CommandBindings>
     <DockPanel>
         <ToolBarTray Height="40" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Top" Background="#FF8639FB">
             <ToolBar x:Name="applicationToolBar" Height="40" Width="176" Background="#FF2FFFCA">
-                <Button x:Name="newButton" Height="38" Width="38">
+                <Button x:Name="newButton" Command="ApplicationCommands.New" Height="38" Width="38">
                     <Image Width="32" Height="32" Source="/new.png"/>
                 </Button>
-                <Button x:Name="openButton" Height="38" Width="38">
+                <Button x:Name="openButton" Command="ApplicationCommands.Open" Height="38" Width="38">
                     <Image Width="32" Height="32" Source="/open.png"/>
                 </Button>
-                <Button x:Name="saveButton" Height="38" Width="38">
+                <Button x:Name="saveButton" Command="ApplicationCommands.Save" Height="38" Width="38">
                     <Image Width="32" Height="32" Source="/save.png"/>
                 </Button>
                 <Button x:Name="trashButton" Height="38" Width="38">
                     <Image Width="32" Height="32" Source="/trash.png"/>
                 </Button>
             </ToolBar>
-            <ToolBar x:Name="editingToolBar" Width="400">
+            <ToolBar x:Name="editingToolBar" Width="450">
                 <ToggleButton x:Name="boldButton" Height="38" Width="38">
                     <Image Width="32" Height="32" Source="/bold.png"/>
                 </ToggleButton>
@@ -34,7 +39,12 @@
                     <Image Width="32" Height="32" Source="/underline.png"/>
                 </ToggleButton>
                 <xctk:ColorPicker x:Name="fontColorPicker" Width="100" Height="32" VerticalAlignment="Center" DisplayColorAndName="True"/>
+                <ComboBox x:Name="fontFamilyComboBox" HorizontalAlignment="Left" VerticalAlignment="Center" Height="32" Width="100" Margin="10,0,0,0"/>
+                <ComboBox x:Name="fontSizeComboBox" HorizontalAlignment="Left" VerticalAlignment="Center" Height="32" Width="50" Margin="10,0,0,0"/>
             </ToolBar>
         </ToolBarTray>
+        <RichTextBox x:Name="rtbEditor" Background="#FFFFFDE6">
+            <FlowDocument/>
+        </RichTextBox>
     </DockPanel>
 </Window>
