--- a/MyDocumentViewer.xaml
+++ b/MyDocumentViewer.xaml
@@ -14,7 +14,7 @@
     </Window.CommandBindings>
     <DockPanel>
         <ToolBarTray Height="40" VerticalAlignment="Top" HorizontalAlignment="Left" DockPanel.Dock="Top" Background="#FF8639FB">
-            <ToolBar x:Name="applicationToolBar" Height="40" Width="176" Background="#FF2FFFCA">
+            <ToolBar x:Name="applicationToolBar" Height="40" Width="180" Background="#FF2FFFCA">
                 <Button x:Name="newButton" Command="ApplicationCommands.New" Height="38" Width="38">
                     <Image Width="32" Height="32" Source="/new.png"/>
                 </Button>
@@ -24,26 +24,26 @@
                 <Button x:Name="saveButton" Command="ApplicationCommands.Save" Height="38" Width="38">
                     <Image Width="32" Height="32" Source="/save.png"/>
                 </Button>
-                <Button x:Name="trashButton" Height="38" Width="38">
+                <Button x:Name="trashButton" Height="38" Width="38" Click="trashButton_Click">
                     <Image Width="32" Height="32" Source="/trash.png"/>
                 </Button>
             </ToolBar>
             <ToolBar x:Name="editingToolBar" Width="450">
-                <ToggleButton x:Name="boldButton" Height="38" Width="38">
+                <ToggleButton x:Name="boldButton" Command="EditingCommands.ToggleBold"  Height="38" Width="38">
                     <Image Width="32" Height="32" Source="/bold.png"/>
                 </ToggleButton>
-                <ToggleButton x:Name="italicButton" Height="38" Width="38">
+                <ToggleButton x:Name="italicButton" Command="EditingCommands.ToggleItalic" Height="38" Width="38">
                     <Image Width="32" Height="32" Source="/italic.png"/>
                 </ToggleButton>
-                <ToggleButton x:Name="underlineButton" Height="38" Width="38">
+                <ToggleButton x:Name="underlineButton" Command="EditingCommands.ToggleUnderline" Height="38" Width="38">
                     <Image Width="32" Height="32" Source="/underline.png"/>
                 </ToggleButton>
-                <xctk:ColorPicker x:Name="fontColorPicker" Width="100" Height="32" VerticalAlignment="Center" DisplayColorAndName="True"/>
-                <ComboBox x:Name="fontFamilyComboBox" HorizontalAlignment="Left" VerticalAlignment="Center" Height="32" Width="100" Margin="10,0,0,0"/>
-                <ComboBox x:Name="fontSizeComboBox" HorizontalAlignment="Left" VerticalAlignment="Center" Height="32" Width="50" Margin="10,0,0,0"/>
+                <xctk:ColorPicker x:Name="fontColorPicker" Width="100" Height="32" VerticalAlignment="Center" DisplayColorAndName="True" SelectedColorChanged="fontColorPicker_SelectedColorChanged"/>
+                <ComboBox x:Name="fontFamilyComboBox" HorizontalAlignment="Left" VerticalAlignment="Center" Height="32" Width="100" Margin="10,0,0,0" SelectionChanged="fontFamilyComboBox_SelectionChanged"/>
+                <ComboBox x:Name="fontSizeComboBox" HorizontalAlignment="Left" VerticalAlignment="Center" Height="32" Width="50" Margin="10,0,0,0" SelectionChanged="fontSizeComboBox_SelectionChanged"/>
             </ToolBar>
         </ToolBarTray>
-        <RichTextBox x:Name="rtbEditor" Background="#FFFFFDE6">
+        <RichTextBox x:Name="rtbEditor" Background="#FFFFFDE6" SelectionChanged="rtbEditor_SelectionChanged">
             <FlowDocument/>
         </RichTextBox>
     </DockPanel>
